--- a/templates/pageBase.html.twig
+++ b/templates/pageBase.html.twig
@@ -20,7 +20,7 @@
             <a class="navbar-brand" href="#">JobsHunter</a>
             <ul class="list-group-horizontal navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Our current ads<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="ads">Our current ads</a>
                 </li>
                 {% if user is null %}
                 {% elseif user.getRole() == 'user' %}
@@ -30,11 +30,14 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="userMenu">See your profile</a>
-                        <a class="dropdown-item" href="/updateUser/{id}">Update your profile</a>
+                        <a class="dropdown-item" href="updateUser/{id}">Update your profile</a>
                         <a class="dropdown-item" href="userMenu">See your applications</a>
                     </div>
                 </li>
                 {% elseif user.getRole() == 'contact' %}
+                    <a class="nav-link" href="companyMenu">
+                        Company Menu
+                    </a>
                 {% elseif user.getRole() == 'admin' %}
                     <a class="nav-link" href="adminMenu">
                         Admin Menu
