--- a/templates/user_cms/user-menu.html.twig
+++ b/templates/user_cms/user-menu.html.twig
@@ -1,75 +1,8 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <title>JobsHunter</title>
-
-    <!-- Custom fonts for this template-->
-    {#    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">#}
-
-    <!-- Custom styles for this template-->
-    <link href = "../bootstrap/dist/css/bootstrap.css" rel = "stylesheet" type = "text/css">
-    <link href = "../styles/styles.css" rel = "stylesheet" type = "text/css">
-</head>
-
-<body class = "d-flex">
-
-
-<!-- SIDEBAR -->
-
-
-<!-- NAVBAR-->
-<nav class="navbar fixed-top navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">JobsHunter</a>
-    <ul class="list-group-horizontal navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Our current ads<span class="sr-only">(current)</span></a>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account information
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="userMenu">See your profile</a>
-                <a class="dropdown-item" href="/updateUser/{id}">Update your profile</a>
-                <a class="dropdown-item" href="userMenu">See your applications</a>
-            </div>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="#">About us</a>
-        </li>
-    </ul>
-
-    <span class="navbar-text">
-                        {% if app.user %}
-                            Welcome {{ app.user.getFirstName() }} <a href="{{ path('app_logout') }}">Logout</a>
-                        {% else %}
-                            <a href="{{ path('app_login') }}">Login</a> or <a href="{{ path('registerPage') }}">Register</a>
-                        {% endif %}
-                        </span>
-    </div>
-</nav>
-
+{% extends 'pageBase.html.twig' %}
+{% block content %}
 <!-- CONTENT -->
 <div class = "custom-row flex-fill">
     <!-- TOPBAR -->
-    <div class = "col-sm-12">
-        <div class = "topbar row">
-            <div class = "col-sm-7">
-
-            </div>
-            <div class = col-sm-5>
-                <div class="p-3">
-                    {% if app.user %}
-                        Welcome {{ app.user.getFirstName() }} <a href="{{ path('app_logout') }}">Logout</a>
-                    {% else %}
-                        <a href="{{ path('app_login') }}">Login</a>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- END TOPBAR -->
     <div class = "row">
         <div class = "col-sm-7">
@@ -158,17 +91,4 @@
     </div>
 </div>
 <!-- END CONTENT -->
-
-
-<!-- Bootstrap core JavaScript-->
-<script src="../vendor/jquery/jquery.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.js"></script>
-
-<!-- Core plugin JavaScript-->
-<script src="../vendor/jquery-easing/jquery.easing.js"></script>
-
-<!-- Custom JavaScript-->
-<script src="../js/script.js"></script>
-
-</body>
-</html>
+{% endblock %}
