--- a/templates/pageBase.html.twig
+++ b/templates/pageBase.html.twig
@@ -20,24 +20,21 @@
             <a class="navbar-brand" href="#">JobsHunter</a>
             <ul class="list-group-horizontal navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="ads">Our current ads</a>
+                    <a class="nav-link" href="/ads">Our current ads<span class="sr-only">(current)</span></a>
                 </li>
                 {% if user is null %}
                 {% elseif user.getRole() == 'user' %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="userMenu" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="userMenu">See your profile</a>
-                        <a class="dropdown-item" href="updateUser/{id}">Update your profile</a>
-                        <a class="dropdown-item" href="userMenu">See your applications</a>
-                    </div>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="userMenu">
+                            Your account
+                        </a>
+                    </li>
                 {% elseif user.getRole() == 'contact' %}
-                    <a class="nav-link" href="companyMenu">
-                        Company Menu
-                    </a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="companyMenu">
+                            Company account
+                        </a>
+                    </li>
                 {% elseif user.getRole() == 'admin' %}
                     <a class="nav-link" href="adminMenu">
                         Admin Menu
@@ -63,15 +60,15 @@
 {% endblock %}
 
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="../vendor/jquery/jquery.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.js"></script>
+<!-- Bootstrap core JavaScript-->
+<script src="../vendor/jquery/jquery.js"></script>
+<script src="../vendor/bootstrap/js/bootstrap.bundle.js"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="../vendor/jquery-easing/jquery.easing.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="../vendor/jquery-easing/jquery.easing.js"></script>
 
-    <!-- Custom JavaScript-->
-    <script src="../js/script.js"></script>
+<!-- Custom JavaScript-->
+<script src="../js/script.js"></script>
 
 </body>
 </html>
