--- a/templates/user_information.html.twig
+++ b/templates/user_information.html.twig
@@ -5,7 +5,7 @@
         <div class = "col-lg-12">
         </div>
         <div class = "col-lg-2">
-            <img src="https/picsum.photos/id/1/300/300"</img></div>
+            <img src="https/picsum.photos/id/1/300/300"></div>
         {#                        Form Column#}
         <div class = "col-lg-10">
             <div class = "col-lg-12 text-left">
